--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 
-<!-- Matomo -->
 <script type="text/javascript">
   var _paq = _paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
@@ -24,7 +23,6 @@
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<!-- End Matomo Code -->
 
 </head>
 <body>
@@ -37,7 +35,7 @@
 		</div>
 
 		<div class="content">
-				<p>we are working on something very interesting!</p>
+				<p>stay tuned!</p>
 		</div>
 		
 	</div>
